# clareza

./: .pre-commit-config.yaml  CONTRIBUTING.rst  Makefile  README.md  pyproject.toml
.github/actions/setup-pdm-env/: action.yml
.github/workflows/: main.yml
clareza/: __init__.py  api.py  embed.py  infra.py  settings.py
tests/: test_embed.py
